adicionado gitignore e outras cositas mas

--- a/index.html
+++ b/index.html
@@ -9,4 +9,6 @@
 <body>
     
 </body>
+<h1>Teste pag</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident accusantium adipisci quos odit ea ut nostrum nobis voluptate eius alias reprehenderit fugiat harum explicabo placeat et vel, officia assumenda suscipit?</p>
 </html>
