add svgs + index html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident accusantium adipisci quos odit ea ut nostrum nobis voluptate eius alias reprehenderit fugiat harum explicabo placeat et vel, officia assumenda suscipit?</p>
+    <img 
+    src="assets/svgs pastas/icon-user.svg" 
+    >
 </body>
 </html>
